# bitchat

./: .Result4  .gitignore  .periphery.baseline.json  .swiftlint.yml  ALL_PRIVACY_FEATURES_COMPLETED.md  CHANGELOG.md  CLAUDE.md  CLEAN_CODE_PACKAGE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  ENCRYPTION_SECURITY_UPDATE.md  GITHUB_PR_PACKAGE.md  GROUP_CHAT_IMPLEMENTATION.md  INTEGRATION_GUIDE.md  Justfile  LOW_VISIBILITY_MODE_IMPLEMENTATION.md  MeshtasticBridge.swift  NOISE_PROTOCOL_ANALYSIS.md  NOISE_PROTOCOL_INTEGRATION.md  NOISE_PROTOCOL_README.md  NOSTR_RELAY_PREFERENCES_IMPLEMENTATION.md  NoiseProtocolImplementation.swift  NoiseProtocolIntegration.md  NoiseProtocolMigrationGuide.md  PRIVACY_POLICY.md  PRODUCTION_README.md  PR_FILE_STRUCTURE.md  PULL_REQUEST.md  Package.resolved  Package.swift  Podfile  README.md  SATMESH_README.md  SECURITY_AUDIT.md  SECURITY_DISCLOSURE.md  SECURITY_FIX_TIMING_ATTACK.md  SECURITY_IMPROVEMENTS.md  SECURITY_PATCHES.md  SECURITY_WORKPLAN.md  (+44 more)
.DerivedData/: info.plist
.Result2/: Info.plist
.Result3/: Info.plist
.Result4.xcresult/: Info.plist
.Result5/: Info.plist
.Result6/: Info.plist
.Result7/: Info.plist
.Result8/: Info.plist
.Result9/: Info.plist
.github/: pull_request_template.md
bitchat-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
bitchat-tauri/capabilities/: main-capability.json
bitchat-tauri/docs/: AI_GUIDANCE_PROTOCOL.md  JACK_DORSEY_LETTER.md  LEGAL_SAFEGUARDS.md  PQC_COMPLIANCE.md  TEST_AND_CHECK_DATA.md
bitchat-tauri/src/: main.rs
bitchat-tauri/src/bluetooth/: mesh_service.rs  mod.rs  peer_manager.rs  protocol.rs
bitchat-tauri/src/crypto/: channel_crypto.rs  enhanced_crypto.rs  mod.rs  noise_protocol.rs
bitchat-tauri/src/frontend/: chat.js  index.html  styles.css
bitchat-tauri/src/message/: message_types.rs  mod.rs  router.rs  storage.rs
bitchat-tauri/src/security/: audit_system.rs  file_protection.rs  hybrid_crypto.rs  mod.rs  pqc_engine.rs  threat_analysis.rs
bitchat-tauri/src/ui_state/: chat_state.rs  mod.rs  preferences.rs
web/: app.js  (+6 more)
(+1566 files in other folders)
